--- a/app/views/checklists/index.html.haml
+++ b/app/views/checklists/index.html.haml
@@ -1,31 +1,29 @@
-%h1 Listing checklists
+%h3 チェックリスト実施状況
 
-%table
-  %thead
-    %tr
-      %th Title
-      %th Checker
-      %th Start at
-      %th Due at
-      %th Submitter
-      %th Submit at
-      %th
-      %th
-      %th
+.btn-group{ role: 'group', "aria-label": '...' }
+  %button.btn.btn-primary{ type: 'button' } すべて
+  %button.btn.btn-default{ type: 'button' } 提出済み
+  %button.btn.btn-default{ type: 'button' } 未提出
 
-  %tbody
-    - @checklists.each do |checklist|
+.table-responsive
+  %table.table.table-striped
+    %thead
       %tr
-        %td= checklist.title
-        %td= checklist.checker
-        %td= checklist.start_at
-        %td= checklist.due_at
-        %td= checklist.submitter
-        %td= checklist.submit_at
-        %td= link_to 'Show', checklist
-        %td= link_to 'Edit', edit_checklist_path(checklist)
-        %td= link_to 'Destroy', checklist, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %th
+        %th ID
+        %th タイトル
+        %th 担当者
+        %th 開始日時
+        %th 期限
+        %th ステータス
+    %tbody
+      - @checklists.each do |checklist|
+        %tr
+          %td= link_to '詳細', checklist
+          %td= checklist.id
+          %td= checklist.title
+          %td= checklist.checker
+          %td= checklist.start_at
+          %td= checklist.due_at
+          %td=
 
-%br
-
-= link_to 'New Checklist', new_checklist_path
