Enable font-awesome

--- a/app/views/checklists/index.html.haml
+++ b/app/views/checklists/index.html.haml
@@ -25,5 +25,5 @@
           %td= checklist.checker
           %td= checklist.start_at
           %td= checklist.due_at
-          %td=
+          %td= icon 'check-circle', '提出済み'
 
