--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,6 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
+    = render 'layouts/global_navigation'
     .container
       = yield
