Customized bootstrap style

--- a/app/views/checklists/index.html.haml
+++ b/app/views/checklists/index.html.haml
@@ -1,7 +1,7 @@
 %h3 チェックリスト実施状況
 
 .btn-group{ role: 'group', "aria-label": '...' }
-  %button.btn.btn-primary{ type: 'button' } すべて
+  %button.btn.btn-default.active{ type: 'button' } すべて
   %button.btn.btn-default{ type: 'button' } 提出済み
   %button.btn.btn-default{ type: 'button' } 未提出
 
