--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,10 @@
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
+@import "bootstrap-customized-variables";
 @import "bootstrap";
+@import "bootstrap-customized-classes";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "sticky-footer";
+
+#logo { letter-spacing: -1px; }
