--- a/app/views/checklists/show.html.haml
+++ b/app/views/checklists/show.html.haml
@@ -5,7 +5,7 @@
     %li= link_to 'チェックリスト実施状況', checklists_path
     %li.active 詳細
   .col-sm-9
-    %h3= @checklist.title
+    %h3.m-t-0= @checklist.title
   .col-sm-3
     %p.text-right
       %button.btn.btn-default{ type: 'button' } 一時保存
