--- a/app/assets/stylesheets/bootstrap-customized-classes.scss
+++ b/app/assets/stylesheets/bootstrap-customized-classes.scss
@@ -1,7 +1,7 @@
 // Customized classes
 // Buttons
 .btn-group {
-  margin: 5px auto;
+  margin: 10px auto;
 }
 .btn {
   padding: 5px 12px;
@@ -22,6 +22,14 @@
 // Breadcrumb
 .breadcrumb {
   margin-bottom: 0;
+}
+// Panels
+.panel {
+  margin-bottom: 10px;
+}
+// Type
+.dl-horizontal {
+  margin-bottom: 10px;
 }
 // Footer
 .footer {
