--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -1,5 +1,5 @@
 %nav.navbar.navbar-default.navbar-static-top
-  .container
+  .container-fluid
     .navbar-header
       %button.navbar-toggle.collapsed{ type: 'button', data: { toggle: 'collapse', target: '#bs-navbar-collapse' }, "aria-expanded": 'false' }
         %span.sr-only Toggle navigation
