--- a/app/assets/stylesheets/bootstrap-customized-classes.scss
+++ b/app/assets/stylesheets/bootstrap-customized-classes.scss
@@ -1,10 +1,10 @@
 // Customized classes
 // Buttons
 .btn-group {
-  margin: 10px auto;
+  margin: 5px auto;
 }
 .btn {
-  padding: 5px 12px;
+  padding: 2px 10px;
 }
 .btn-default {
   &:hover, &:active, &:active:hover, &.active, &.active:hover {
@@ -21,6 +21,7 @@
 }
 // Breadcrumb
 .breadcrumb {
+  padding-top: 0;
   margin-bottom: 0;
 }
 // Panels
@@ -30,6 +31,18 @@
 // Type
 .dl-horizontal {
   margin-bottom: 10px;
+}
+// Page header
+.page-header {
+  margin: 10px auto;
+  padding: 0;
+  h1, h2, h3, h4, h5 {
+    margin: 10px auto;
+  }
+}
+// Tables
+.table-responsive {
+  margin-top: 5px;
 }
 // Footer
 .footer {
