Change views of show

--- a/app/assets/stylesheets/bootstrap-customized-classes.scss
+++ b/app/assets/stylesheets/bootstrap-customized-classes.scss
@@ -26,11 +26,11 @@
 }
 // Panels
 .panel {
-  margin-bottom: 10px;
+  margin: 5px auto;
 }
 // Type
 .dl-horizontal {
-  margin-bottom: 10px;
+  margin: 0px;
 }
 // Page header
 .page-header {
