--- a/app/assets/stylesheets/bootstrap-customized-classes.scss
+++ b/app/assets/stylesheets/bootstrap-customized-classes.scss
@@ -7,7 +7,7 @@
   padding: 2px 10px;
 }
 .btn-default {
-  &:hover, &:active, &:active:hover, &.active, &.active:hover {
+  &:hover, &:active, &:focus, &:active:hover, &.active, &.active:hover, &.active:focus {
     background-color: $btn-default-color;
     color:            $btn-default-bg;
   }
@@ -17,7 +17,7 @@
   border-bottom: 2px solid $navbar-default-border;
 }
 .navbar-static-top {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 // Breadcrumb
 .breadcrumb {
@@ -38,6 +38,9 @@
   padding: 0;
   h1, h2, h3, h4, h5 {
     margin: 10px auto;
+    small {
+      font-size: $font-size-base;
+    }
   }
 }
 // Tables
@@ -60,5 +63,11 @@
 // Utility classes of Bootstrap4-alpha
 // Spacing
 .m-t-0 {
-  margin-top: 0 !important;
+  margin-top:    0 !important;
+}
+.m-b-0 {
+  margin-bottom: 0 !important;
+}
+.m-l-0 {
+  margin-left:   0 !important;
 }
