--- a/app/assets/stylesheets/bootstrap-customized-variables.scss
+++ b/app/assets/stylesheets/bootstrap-customized-variables.scss
@@ -9,6 +9,8 @@ $nav-main-color:  $base-color;
 // Customized variables
 // Typography
 $font-size-base: 16px;
+$font-size-h3: ceil(($font-size-base * 1.5));
+$font-size-h4: ceil(($font-size-base * 1.1));
 // Scaffolding
 $body-bg:    $base-color;
 $text-color: $base-text-color;
