--- a/app/views/checklists/_check_form.html.haml
+++ b/app/views/checklists/_check_form.html.haml
@@ -1,13 +1,13 @@
 %form.form-horizontal
   -#見出し
   .form-group
-    .col-sm-12
+    .col-xs-12
       .page-header.m-b-0
         %h4 見出しをつけてグルーピング
 
   -#テキスト
   .form-group.m-l-0
-    .col-sm-12
+    .col-xs-12
       テキスト/文字列を自由に記載できる
 
   -#画像
@@ -39,7 +39,7 @@
 
   -#フォーム[ラジオボタン]
   .form-group.m-l-0
-    %label.control-label.col-sm-4
+    %label.control-label.radio-inline-label.col-sm-4
       選択肢を選ぶフォーム
     .col-sm-8
       %label.radio-inline
