--- a/app/assets/stylesheets/bootstrap-customized-classes.scss
+++ b/app/assets/stylesheets/bootstrap-customized-classes.scss
@@ -26,7 +26,7 @@
 }
 // Panels
 .panel {
-  margin: 5px auto;
+  margin: 10px auto 5px auto;
 }
 // Type
 .dl-horizontal {
@@ -58,6 +58,10 @@
 // Alert
 .alert {
   margin-bottom: 15px;
+}
+// Radio
+.radio-inline:first-child {
+  padding-left: 30px;
 }
 
 // Utility classes of Bootstrap4-alpha
