--- a/app/views/checklist_templates/new.html.haml
+++ b/app/views/checklist_templates/new.html.haml
@@ -1,5 +1,8 @@
-%h1 New checklist_template
+.row
+  .col-xs-7
+    %ol.breadcrumb
+      %li= link_to 'テンプレート', checklist_templates_path
+      %li.active 新規作成
+%br
 
 = render 'form'
-
-= link_to 'Back', checklist_templates_path
