--- a/app/views/checklists/edit.html.haml
+++ b/app/views/checklists/edit.html.haml
@@ -1,7 +1,9 @@
-%h1 Editing checklist
+.row
+  .col-xs-7
+    %ol.breadcrumb
+      %li= link_to 'チェックリスト', checklists_path
+      %li= link_to '詳細', @checklist
+      %li.active 編集
+%br
 
 = render 'form'
-
-= link_to 'Show', @checklist
-\|
-= link_to 'Back', checklists_path
