--- a/app/views/checklists/new.html.haml
+++ b/app/views/checklists/new.html.haml
@@ -1,5 +1,8 @@
-%h1 New checklist
+.row
+  .col-xs-7
+    %ol.breadcrumb
+      %li= link_to 'チェックリスト', checklists_path
+      %li.active 新規作成
+%br
 
 = render 'form'
-
-= link_to 'Back', checklists_path
