--- a/app/views/checklists/_form.html.haml
+++ b/app/views/checklists/_form.html.haml
@@ -7,5 +7,6 @@
     = f.input :due_at
     = f.input :checker
 
-  .form-actions
-    = f.button :submit
+  .form-group
+    .form-actions
+      = f.button :submit
