--- a/lib/templates/haml/scaffold/_form.html.haml
+++ b/lib/templates/haml/scaffold/_form.html.haml
@@ -6,5 +6,6 @@
     = f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %>
   <%- end -%>
 
-  .form-actions
-    = f.button :submit
+  .form-group
+    .form-actions
+      = f.button :submit
