--- a/app/views/checklist_templates/_form.html.haml
+++ b/app/views/checklist_templates/_form.html.haml
@@ -5,5 +5,6 @@
     = f.input  :title
     = f.input  :description, input_html: { rows: 3 }
 
-  .form-actions
-    = f.button :submit
+  .form-group
+    .form-actions
+      = f.button :submit
