Change attribute name of checklist templates

--- a/app/views/checklist_templates/index.html.haml
+++ b/app/views/checklist_templates/index.html.haml
@@ -16,7 +16,7 @@
         %th アクション
         %th タイトル
         %th 説明
-        %th 実施数
+        %th 実施回数
         %th 更新日
         %th 更新者
     %tbody
