--- a/app/views/checklist_templates/show.html.haml
+++ b/app/views/checklist_templates/show.html.haml
@@ -17,7 +17,7 @@
     %dl.dl-horizontal
       %dt  テンプレート番号
       %dd= @checklist_template.id
-      %dt  実施数
+      %dt  実施回数
       %dd= @checklist_template.checklists_count
   .col-xs-6
     %dl.dl-horizontal
