--- a/app/views/checklists/new.html.haml
+++ b/app/views/checklists/new.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-xs-12
     %ol.breadcrumb
-      %li= link_to 'チェックリスト', checklists_path
+      %li= link_to t('activerecord.models.checklist'), checklists_path
       %li.active 新規作成
 %br
 
