--- a/app/views/checklist_templates/edit.html.haml
+++ b/app/views/checklist_templates/edit.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-xs-12
     %ol.breadcrumb
-      %li= link_to 'テンプレート', checklist_templates_path
+      %li= link_to t('activerecord.models.checklist_template'), checklist_templates_path
       %li= link_to '詳細', @checklist_template
       %li.active 編集
 %br
