--- a/app/views/checklist_templates/index.html.haml
+++ b/app/views/checklist_templates/index.html.haml
@@ -1,24 +1,24 @@
 .row
   .col-xs-7
     %ol.breadcrumb
-      %li.active テンプレート
+      %li.active= t('activerecord.models.checklist_template')
   .col-xs-5
     .text-right
       = link_to '新規作成', new_checklist_template_path, { role: 'button', class: 'btn btn-default' }
   .col-xs-12
     .page-header
-      %h3 テンプレート一覧
+      %h3 #{ t('activerecord.models.checklist_template') }一覧
 
 .table-responsive
   %table.table.table-striped
     %thead
       %tr
         %th アクション
-        %th タイトル
-        %th 説明
-        %th 実施回数
-        %th 更新日
-        %th 更新者
+        %th= t('activerecord.attributes.checklist_template.title')
+        %th= t('activerecord.attributes.checklist_template.description')
+        %th= t('activerecord.attributes.checklist_template.checklists_count')
+        %th= t('activerecord.attributes.checklist_template.updated_at')
+        %th= t('activerecord.attributes.checklist_template.updater')
     %tbody
       - @checklist_templates.each do |checklist_template|
         %tr
