--- a/app/views/checklist_templates/new.html.haml
+++ b/app/views/checklist_templates/new.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-xs-12
     %ol.breadcrumb
-      %li= link_to 'テンプレート', checklist_templates_path
+      %li= link_to t('activerecord.models.checklist_template'), checklist_templates_path
       %li.active 新規作成
 %br
 
