--- a/app/views/checklists/edit.html.haml
+++ b/app/views/checklists/edit.html.haml
@@ -1,7 +1,7 @@
 .row
   .col-xs-12
     %ol.breadcrumb
-      %li= link_to 'チェックリスト', checklists_path
+      %li= link_to t('activerecord.models.checklist'), checklists_path
       %li= link_to '詳細', @checklist
       %li.active 編集
 %br
