Add creating checklist from checklist_template

--- a/app/views/checklist_templates/show.html.haml
+++ b/app/views/checklist_templates/show.html.haml
@@ -5,7 +5,7 @@
       %li.active 詳細
   .col-xs-5
     .text-right.link-button-group
-      = link_to '割り当て', '#', { role: 'button', class: 'btn btn-default' }
+      = link_to '割り当て', new_checklist_template_checklist_path(@checklist_template), { role: 'button', class: 'btn btn-default' }
   .col-xs-12
     .page-header
       %h3
