--- a/app/views/checklists/new.html.haml
+++ b/app/views/checklists/new.html.haml
@@ -1,8 +1,9 @@
 .row
   .col-xs-12
     %ol.breadcrumb
-      %li= link_to t('activerecord.models.checklist'), checklists_path
-      %li.active 新規作成
+      %li= link_to t('activerecord.models.checklist_template'), checklist_templates_path
+      %li= link_to '詳細', @checklist_template
+      %li.active 割り当て
 %br
 
 = render 'form'
