--- a/app/views/checklists/show.html.haml
+++ b/app/views/checklists/show.html.haml
@@ -14,10 +14,12 @@
         %small= link_to '編集', edit_checklist_path(@checklist)
 
 .row
-  .col-xs-6
+  .col-xs-12
     %dl.dl-horizontal
       %dt= t('activerecord.attributes.checklist.id')
       %dd= @checklist.id
+  .col-xs-6
+    %dl.dl-horizontal
       %dt= t('activerecord.attributes.checklist.start_at')
       %dd= @checklist.start_at
       %dt= t('activerecord.attributes.checklist.due_at')
@@ -26,16 +28,15 @@
       %dd= @checklist.checker
   .col-xs-6
     %dl.dl-horizontal
-      %dt= t('activerecord.attributes.checklist_template.id')
-      %dd= @checklist.checklist_template_id
       %dt  ステータス
       %dd
         .progress{ style: 'margin-bottom: 0;' }
           .progress-bar.progress-bar-success{ role: 'progressbar', aria: { valuenow: '20', valuemin: '0', valuemax: '100' }, style: 'width: 20%;' }20%
-      %dt= t('activerecord.attributes.checklist.submit_at')
-      %dd= @checklist.submit_at
-      %dt= t('activerecord.attributes.checklist.submitter')
-      %dd= @checklist.submitter
+      - if @checklist.submit_at.present?
+        %dt= t('activerecord.attributes.checklist.submit_at')
+        %dd= @checklist.submit_at
+        %dt= t('activerecord.attributes.checklist.submitter')
+        %dd= @checklist.submitter
 
 %hr.separator
 
