Rename checklist template to template

--- a/app/views/checklists/_form.html.haml
+++ b/app/views/checklists/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [@checklist_template, @checklist] do |f|
+= simple_form_for [@template, @checklist] do |f|
   = f.error_notification
 
   .form-inputs
