--- a/app/views/templates/edit.html.haml
+++ b/app/views/templates/edit.html.haml
@@ -3,7 +3,7 @@
     %ol.breadcrumb
       %li= link_to t('activerecord.models.template'), templates_path
       %li= link_to '詳細', @template
-      %li.active 割り当て
+      %li.active 編集
 %br
 
 = render 'form'
