--- a/app/views/templates/new.html.haml
+++ b/app/views/templates/new.html.haml
@@ -2,8 +2,7 @@
   .col-xs-12
     %ol.breadcrumb
       %li= link_to t('activerecord.models.template'), templates_path
-      %li= link_to '詳細', @template
-      %li.active 割り当て
+      %li.active 新規作成
 %br
 
 = render 'form'
