--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -13,7 +13,7 @@
           %a.dropdown-toggle{ href: '#', role: 'button', data: { toggle: 'dropdown' },  aria: { haspopup: 'true', expanded: 'false' } }
             カテゴリ #{ icon('caret-down') }
           %ul.dropdown-menu
-            %li= link_to 'テンプレート',   checklist_templates_path
+            %li= link_to 'テンプレート',   templates_path
             %li= link_to 'チェックリスト', checklists_path
             %li= link_to 'レポート',       '#'
       %ul.nav.navbar-nav.navbar-right
