Implement CRUD of form_item from template

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,9 @@ th {
 .required-text {
   margin-left: 5px;
 }
+.radio-form-margin {
+  margin-left: -20px;
+}
 
 // Define custom checkbox style
 .icon-checkbox {
