--- a/app/views/form_items/template/_help_text.html.haml
+++ b/app/views/form_items/template/_help_text.html.haml
@@ -4,5 +4,5 @@
     .col-xs-12
       = form_item.label
   .media-right.media-middle.text-nowrap
-    = link_to '編集', '#', class: 'media-object'
-%hr
+    = link_to '編集', edit_form_item_path(form_item), class: 'media-object'
+    = link_to '削除', form_item, method: :delete, data: { confirm: t('message.delete_confirm') }
