--- a/app/views/form_items/new.html.haml
+++ b/app/views/form_items/new.html.haml
@@ -1,5 +1,9 @@
-%h1 New form_item
+.row
+  .col-xs-12
+    %ol.breadcrumb
+      %li= link_to t('activerecord.models.template'), templates_path
+      %li= link_to '詳細', @template
+      %li.active 項目の追加
+%br
 
-= render 'form'
-
-= link_to 'Back', form_items_path
+= render partial: 'form', locals: { template: @template, form_item: @form_item }
