--- a/app/views/form_items/checklist/_help_text.html.haml
+++ b/app/views/form_items/checklist/_help_text.html.haml
@@ -1,7 +1,4 @@
 -#テキスト
-.media
-  .media-body.media-middle
-    .col-xs-12
-      = form_item.label
-  .media-right.media-middle.text-nowrap
-    = link_to '編集', '#', class: 'media-object'
+.form-group.m-l-0
+  .col-xs-12
+    = form_item.label
