--- a/app/views/checklists/show.html.haml
+++ b/app/views/checklists/show.html.haml
@@ -11,7 +11,9 @@
     .page-header
       %h3
         = @checklist.title
-        %small= link_to '編集', edit_checklist_path(@checklist)
+        %small
+          = link_to '編集', edit_checklist_path(@checklist)
+          = link_to '削除', @checklist, method: :delete, data: { confirm: t('message.delete_confirm') }, class: 'delete-action'
 
 .row
   .col-xs-12
