--- a/app/views/form_items/checklist/_heading.html.haml
+++ b/app/views/form_items/checklist/_heading.html.haml
@@ -1,7 +1,5 @@
 -#見出し
-.media
-  .media-body.media-middle
-    %h4.m-t-0.m-b-0
-      = form_item.label
-  .media-right.media-middle.text-nowrap
-    = link_to '編集', '#', class: 'media-object'
+.form-group
+  .col-xs-12
+    .page-header.m-b-0
+      %h4= form_item.label
