--- a/app/views/form_items/checklist/_checkbox.html.haml
+++ b/app/views/form_items/checklist/_checkbox.html.haml
@@ -1,13 +1,10 @@
 -#チェックボックス
-.media
-  .media-body.media-middle
-    .col-xs-12
+.form-group.m-l-0
+  .col-xs-12
+    .icon-checkbox
       .icon-checkbox-left
         %label
           %input{ type: 'checkbox' }
           %span
       .icon-checkbox-body
         = form_item.label
-  .media-right.media-middle.text-nowrap
-    = link_to '編集', '#', class: 'media-object'
-
