--- a/app/views/checklists/show.html.haml
+++ b/app/views/checklists/show.html.haml
@@ -5,7 +5,6 @@
       %li.active 詳細
   .col-xs-5
     .text-right
-      = link_to '保存', '#', { role: 'button', class: 'btn btn-default' }
       = link_to '提出', '#', { role: 'button', class: 'btn btn-default' }
   .col-xs-12
     .page-header
@@ -41,7 +40,9 @@
         %dd= @checklist.submitter
 
 %hr.separator
-
-%form.form-horizontal
+= form_tag save_checklist_path, method: :put, class: 'form-horizontal' do
   - @form_items.each do |form_item|
     = render partial: "form_items/checklist/#{ form_item.class.name.underscore }", locals: { form_item: form_item }
+  - if @checklist.forms.present?
+    .text-right
+      = submit_tag '保存', class: 'btn btn-default', disable_with: '送信中...'
