--- a/app/views/form_items/checklist/_checkbox.html.haml
+++ b/app/views/form_items/checklist/_checkbox.html.haml
@@ -4,7 +4,7 @@
     .icon-checkbox
       .icon-checkbox-left
         %label
-          %input{ type: 'checkbox' }
+          = check_box_tag "form[#{ form_item.id }]", 'true', form_item.checked?
           %span
       .icon-checkbox-body
         = form_item.label
